drawer state changes work, hacing issues with the visibility prop

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-.project {
+.project-inactive {
+  margin-top: 2em; }
+
+.project-active {
   margin-top: 2em; }
 
 .project-title {
